force-app/main/default/objects/Scheme_Tier__c/Scheme_Tier__c.object-meta.xml
<CustomObject>
    <label>Scheme Tier</label>
    <pluralLabel>Scheme Tiers</pluralLabel>
    <nameField>
        <displayFormat>TIER-{0000}</displayFormat>
        <label>Tier No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>