force-app/main/default/objects/Scheme_Tier__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>MasterDetail</type>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>